Removing scale-monitor-framebuffer distorts the image, if not reset to 100% scale beforehand
Affected version
mutter-45.0-3.fc39.x86_64
gnome-shell-45.0-1.fc39.x86_64
Bug summary
In Fedora 39 GNOME temporarily enabled scale-monitor-framebuffer
feature, but then disabled it again. Unfortunately, I found that users who had non-integer display scaling enabled (125%, 150%, etc) before the revert now see a distorted image. The fonts are a bit squished, the icons are a bit blurrier.
Steps to reproduce
I can easily reproduced in a virtual machine:
- Enable the feature:
gsettings set org.gnome.mutter experimental-features "['scale-monitor-framebuffer']"
- Relogin
- Set 125% scale in Display settings
- Disable the feature:
gsettings set org.gnome.mutter experimental-features "[]"
- Relogin
- See your fonts squished a bit
- Enable the feature:
gsettings set org.gnome.mutter experimental-features "['scale-monitor-framebuffer']"
- Relogin
- Set 100% scale in Display settings
- Disable the feature:
gsettings set org.gnome.mutter experimental-features "[]"
- Relogin
- See your fonts being normal again
What happened
The fonts and image scaling is broken
What did you expect to happen
When the feature is disabled, the scale should either return back to 100%, or it should at least no longer have any effect on the output
Relevant logs, screenshots, screencasts etc.
This is how the desktop looks if you have scale set to 100% and disable the feature:
This is how the desktop looks if you have scale set to 125% and disable the feature:
Please open the images in a new tab, or EOG (not Loupe, that has a transition effect), and compare them by quickly switching between them. You'll see the fonts and images being squished/blurry on the second screenshot.